# server/src/main/java/com/ems/controllers/VoterController.java
@@ -1,7 +1,6 @@
 package com.ems.controllers;
 
 import com.ems.dtos.VoterRegisterDTO;
-import com.ems.dtos.VoterDTO;
 import com.ems.dtos.VoterSearchDTO;
 import com.ems.dtos.VoterStatusDTO;
 import com.ems.exceptions.DataNotFoundException;
@@ -9,6 +8,7 @@ import com.ems.services.VoterService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.openapitools.model.VoterDTO;
 import org.springframework.data.domain.Page;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
@@ -29,45 +29,40 @@ import java.util.List;
 public class VoterController {
     private final VoterService voterService;
 
-    @PostMapping(value = "/register", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<VoterDTO> register(
-            @Valid @RequestPart(value = "voter") VoterRegisterDTO voterRegisterDTO,
-            @RequestPart(value = "image", required = false) MultipartFile image,
-            @RequestPart(value = "signature", required = false) MultipartFile signature
-    ) throws DataNotFoundException, IOException {
-        log.info("voter register details : {}", voterRegisterDTO);
-        return ResponseEntity.status(HttpStatus.CREATED).body(voterService.register(voterRegisterDTO, image, signature));
-    }
+//    @PostMapping("/register")
+//    public ResponseEntity<VoterDTO> registerVoter(@RequestBody VoterRegisterDTO voterRegisterDTO) {
+//        VoterDTO registeredVoter = voterService.register(voterRegisterDTO);
+//        return ResponseEntity.status(HttpStatus.CREATED).body(registeredVoter);
+//    }
 
-    @GetMapping("/search")
-    public ResponseEntity<Page<VoterDTO>> searchVoters(
-            @RequestParam(required = false) String firstName,
-            @RequestParam(required = false) String lastName,
-            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate dateOfBirth,
-            @RequestParam(required = false) String dmvNumber,
-            @RequestParam(required = false) String ssnNumber,
-            @RequestParam(required = false) String city,
-            @RequestParam int page,
-            @RequestParam int size,
-            @RequestParam(required = false) String[] sort) {
-
-        VoterSearchDTO searchDTO = new VoterSearchDTO(firstName, lastName, dateOfBirth, dmvNumber, ssnNumber, city);
-        Page<VoterDTO> result = voterService.searchVoters(searchDTO, page, size, sort);
-        return ResponseEntity.ok(result);
-    }
-
-    @PatchMapping(value = "/{voterId}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<VoterDTO> updateVoterImage(
-            @PathVariable String voterId,
-            @RequestPart(value = "voter", required = false) VoterDTO voterDTO,
-            @RequestPart(value = "image", required = false) MultipartFile profileImg,
-            @RequestPart(value = "signature", required = false) MultipartFile signImg) throws IOException {
-        return ResponseEntity.ok(voterService.updateVoter(voterId, voterDTO, profileImg, signImg));
-    }
-
-
-    @GetMapping("/status")
-    public ResponseEntity<List<VoterStatusDTO>> getAllStatus(){
-        return ResponseEntity.ok(voterService.getAllStatus());
-    }
+//    @GetMapping("/search")
+//    public ResponseEntity<Page<VoterDTO>> searchVoters(
+//            @RequestParam(required = false) String firstName,
+//            @RequestParam(required = false) String lastName,
+//            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate dateOfBirth,
+//            @RequestParam(required = false) String dmvNumber,
+//            @RequestParam(required = false) String ssnNumber,
+//            @RequestParam(required = false) String city,
+//            @RequestParam int page,
+//            @RequestParam int size,
+//            @RequestParam(required = false) String[] sort) {
+//
+//        VoterSearchDTO searchDTO = new VoterSearchDTO(firstName, lastName, dateOfBirth, dmvNumber, ssnNumber, city);
+//        Page<VoterDTO> result = voterService.searchVoters(searchDTO, page, size, sort);
+//        return ResponseEntity.ok(result);
+//    }
+//
+//    @PatchMapping(value = "/{voterId}")
+//    public ResponseEntity<VoterDTO> updateVoterImage(
+//            @PathVariable String voterId,
+//            @RequestPart(value = "voter", required = false) org.openapitools.model.VoterDTO voterDTO)
+//            throws IOException {
+//        return ResponseEntity.ok(voterService.updateVoter(voterId, voterDTO));
+//    }
+//
+//
+//    @GetMapping("/status")
+//    public ResponseEntity<List<VoterStatusDTO>> getAllStatus(){
+//        return ResponseEntity.ok(voterService.getAllStatus());
+//    }
 }
