# server/src/main/java/com/ems/mappers/GlobalMapper.java
@@ -1,6 +1,7 @@
 package com.ems.mappers;
 
 import com.ems.dtos.*;
+import org.openapitools.model.AddressDTO;
 import com.ems.entities.*;
 import com.ems.entities.constants.AddressType;
 import lombok.extern.slf4j.Slf4j;
@@ -15,44 +16,12 @@ public interface GlobalMapper {
     @Mapping(target = "image", ignore = true)
     @Mapping(target = "signature", ignore = true)
     @Mapping(target = "voterStatus", ignore = true)
-    Voter toVoter(VoterRegisterDTO voterRegisterDTO);
+    Voter toVoter(org.openapitools.model.VoterRegisterDTO voterRegisterDTO);
     Voter toVoter(VoterSearchDTO voterSearchDTO);
 
     @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
 //    @Mapping(target = "address", ignore = true) // Ignore address field in direct mapping
-    Voter voterDTOtoVoter(VoterDTO voterDTO, @MappingTarget Voter voter);
-
-//    @AfterMapping
-//    default void mapAddresses(VoterDTO voterDTO, @MappingTarget Voter voter) {
-//
-//        List<Address> addresses = new ArrayList<>();
-//
-//        if (voterDTO.getResidentialAddress() != null) {
-//            Address residentialAddress = mapAddressDTO(voterDTO.getResidentialAddress(), voter);
-//            residentialAddress.setAddressType(AddressType.RESIDENTIAL);
-//            addresses.add(residentialAddress);
-//        }
-//
-//        if (voterDTO.getMailingAddress() != null) {
-//            Address mailingAddress = mapAddressDTO(voterDTO.getMailingAddress(), voter);
-//            mailingAddress.setAddressType(AddressType.MAILING);
-//            addresses.add(mailingAddress);
-//        }
-//
-//        voter.setAddress(addresses);
-//    }
-
-//    default Address mapAddressDTO(AddressDTO addressDTO, Voter voter) {
-//        Address address = new Address();
-//        address.setAddressLine(addressDTO.getAddressLine());
-//        address.setAptNumber(addressDTO.getAptNumber());
-//        address.setCity(addressDTO.getCity());
-//        address.setCounty(addressDTO.getCounty());
-//        address.setState(addressDTO.getState());
-//        address.setZipCode(addressDTO.getZipCode());
-//        address.setVoter(voter);
-//        return address;
-//    }
+    Voter voterDTOtoVoter(org.openapitools.model.VoterDTO voterDTO, @MappingTarget Voter voter);
 
     @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
     Address addressDTOToAddress(AddressDTO addressDTO, @MappingTarget Address address);
@@ -68,16 +37,16 @@ public interface GlobalMapper {
             expression = "java(getAddressByType(voter.getAddress(), com.ems.entities.constants.AddressType.MAILING))")
     @Mapping(source = "party.partyId", target = "partyId")
     @Mapping(target = "statusId", source = "voterStatus.statusId")
-    VoterDTO toVoterDTO(Voter voter);
+    org.openapitools.model.VoterDTO toVoterDTO(Voter voter);
 
     @Mapping(target = "partySymbol", ignore = true)
-    Party toParty(PartyDTO partyDTO);
+    Party toParty(org.openapitools.model.PartyDTO partyDTO);
     @Mapping(target = "partySymbol", ignore = true)
-    PartyDTO toPartyDTO(Party party);
+    org.openapitools.model.PartyDTO toPartyDTO(Party party);
 
     @Mapping(target = "addressId", ignore = true)
     @Mapping(target = "voter", ignore = true)
-    Address toAddress(AddressDTO addressDTO);
+    Address toAddress(org.openapitools.model.AddressDTO addressDTO);
 
     @Mapping(source = "voter.voterId", target = "voterId")
     AddressDTO toAddressDTO(Address address);
@@ -89,7 +58,7 @@ public interface GlobalMapper {
     Election toElectionDTO(ElectionDTO electionDTO);
     ElectionDTO toElection(Election election);
 
-    List<VoterStatusDTO> toVoterStatusDTOList(List<VoterStatus> voterStatusList);
+    List<org.openapitools.model.VoterStatusDTO> toVoterStatusDTOList(List<VoterStatus> voterStatusList);
 
     @Mapping(source = "address.voter.voterId", target = "voterId")
     AddressHistory toAddressHistory(Address address);
