# server/src/main/java/com/ems/services/impls/VoterServiceImpl.java
@@ -1,34 +1,32 @@
 package com.ems.services.impls;
 
-import com.ems.dtos.*;
-import com.ems.entities.Address;
-import com.ems.entities.NameHistory;
-import com.ems.entities.Voter;
-import com.ems.entities.constants.AddressType;
-import com.ems.events.VoterUpdateEvent;
-import com.ems.exceptions.DataNotFoundException;
-import com.ems.exceptions.DataAlreadyExistException;
-import com.ems.mappers.GlobalMapper;
-import com.ems.repositories.*;
-import com.ems.services.AuditService;
-import com.ems.services.VoterService;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.slf4j.MDC;
-import org.springframework.beans.BeanUtils;
-import org.springframework.context.ApplicationEventPublisher;
-import org.springframework.data.domain.*;
-import org.springframework.data.domain.Example;
-import org.springframework.data.domain.ExampleMatcher;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
-
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.time.LocalDate;
+import java.util.Base64;
+import com.ems.dtos.*;
+import com.ems.entities.Address;
+import com.ems.entities.Voter;
+import com.ems.entities.constants.AddressType;
+import com.ems.events.VoterUpdateEvent;
+import com.ems.exceptions.DataAlreadyExistException;
+import com.ems.exceptions.DataNotFoundException;
+import com.ems.mappers.GlobalMapper;
+import com.ems.repositories.*;
+import com.ems.services.VoterService;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.openapitools.model.VoterStatusDTO;
+import org.slf4j.MDC;
+import org.springframework.beans.BeanUtils;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.data.domain.*;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+
 import java.util.List;
 
 @Slf4j
@@ -36,9 +34,9 @@ import java.util.List;
 @RequiredArgsConstructor
 public class VoterServiceImpl implements VoterService {
 
-    private static final String DIRECTORY = "E:/bright_peers/projects/new/election-management-system/server/uploads";
+    private static final String DIRECTORY = "D:/Spring/election-management-system/server/uploads";
     private static final String PHOTO_DIR = DIRECTORY + "/photos";
-    private static final String SIGNATURE_DIR = DIRECTORY + "/signatures";
+    private static final String SIGNATURE_DIR = DIRECTORY + "/signature";
 
     private final VoterRepository voterRepo;
     private final GlobalMapper globalMapper;
@@ -48,9 +46,9 @@ public class VoterServiceImpl implements VoterService {
     private final VoterStatusRepository voterStatusRepo;
     private final ApplicationEventPublisher eventPublisher;
 
-    @Override
     @Transactional
-    public VoterDTO register(VoterRegisterDTO voterRegisterDTO, MultipartFile image, MultipartFile signature) throws IOException {
+    @Override
+    public org.openapitools.model.VoterDTO register(org.openapitools.model.VoterRegisterDTO voterRegisterDTO){
         log.info("voter registration start for : {}", voterRegisterDTO.getSsnNumber());
 
         if (voterRepo.existsBySsnNumber(voterRegisterDTO.getSsnNumber()))
@@ -61,10 +59,33 @@ public class VoterServiceImpl implements VoterService {
         var voter = globalMapper.toVoter(voterRegisterDTO);
         voter.setParty(party);
 
-        if(image!=null)
-            voter.setImage(getImage(voterRegisterDTO, image));
-        if(signature!=null)
-            voter.setSignature(getSignature(voterRegisterDTO, signature));
+
+        String imagePath = null;
+        if (voterRegisterDTO.getImage() != null) {
+            String imageName = voterRegisterDTO.getSsnNumber() + ".png";
+            try {
+                imagePath = decodeAndSaveBase64Image(voterRegisterDTO.getImage(), PHOTO_DIR, imageName);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+
+        String signaturePath = null;
+        if (voterRegisterDTO.getSignature() != null) {
+            String signName = voterRegisterDTO.getSsnNumber() + "_sign.png";
+            try {
+                signaturePath = decodeAndSaveBase64Image(voterRegisterDTO.getSignature(), SIGNATURE_DIR, signName);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+        if(voterRegisterDTO.getImage()!=null)
+            voter.setImage(imagePath);
+        if(voterRegisterDTO.getSignature()!=null)
+            voter.setSignature(signaturePath);
+
 
         var voterStatus = voterStatusRepo.findById(voterRegisterDTO.getStatusId()).orElseThrow(() -> new DataNotFoundException("Voter Status Not Found"));
         voter.setVoterStatus(voterStatus);
@@ -84,32 +105,9 @@ public class VoterServiceImpl implements VoterService {
         return globalMapper.toVoterDTO(savedVoter);
     }
 
-    private String getImage(VoterRegisterDTO voterRegisterDTO, MultipartFile image) throws IOException {
-        Files.createDirectories(Paths.get(PHOTO_DIR));
-
-        String imageFileName = null;
-        if (!image.isEmpty()) {
-            imageFileName = voterRegisterDTO.getSsnNumber() + "_" + image.getOriginalFilename();
-            var imagePath = Paths.get(DIRECTORY, "/photos").resolve(imageFileName);
-            Files.write(imagePath, image.getBytes());
-        }
-        return imageFileName;
-    }
-
-    private String getSignature(VoterRegisterDTO voterRegisterDTO, MultipartFile signature) throws IOException {
-        Files.createDirectories(Paths.get(SIGNATURE_DIR));
-
-        String signatureFileName = null;
-        if (!signature.isEmpty()) {
-            signatureFileName = voterRegisterDTO.getSsnNumber() + "_" + signature.getOriginalFilename();
-            var signaturePath = Paths.get(DIRECTORY, "/signatures").resolve(signatureFileName);
-            Files.write(signaturePath, signature.getBytes());
-        }
-        return signatureFileName;
-    }
 
     @Override
-    public Page<VoterDTO> searchVoters(VoterSearchDTO searchDTO, int page, int size, String[] sort) {
+    public Page<org.openapitools.model.VoterDTO> searchVoters(VoterSearchDTO searchDTO, int page, int size, String[] sort) {
         log.info("Searching voters with filters: {}", searchDTO);
         Pageable pageable = PageRequest.of(page, size, getSort(sort));
         return  voterRepo.searchVoters(
@@ -133,8 +131,14 @@ public class VoterServiceImpl implements VoterService {
     }
 
     @Override
+    public List<VoterStatusDTO> getAllStatus() {
+        return globalMapper.toVoterStatusDTOList(voterStatusRepo.findAll());
+    }
+
+
+    @Override
     @Transactional
-    public VoterDTO updateVoter(String voterId, VoterDTO voterDTO, MultipartFile profileImg, MultipartFile signImg) throws IOException {
+    public org.openapitools.model.VoterDTO updateVoter(String voterId, org.openapitools.model.VoterDTO voterDTO){
         MDC.put("VoterId", voterId);
         log.info("Update process started for voter {}", voterId);
 
@@ -143,14 +147,27 @@ public class VoterServiceImpl implements VoterService {
 
         var oldVoter = new Voter();
         BeanUtils.copyProperties(existingVoter, oldVoter);
-        var oldAddressList = getOldAddressList(existingVoter);
+
 
         var updatedVoter = globalMapper.voterDTOtoVoter(voterDTO, existingVoter);
-
         log.info("updatedVoter party : {},", updatedVoter.getParty().getPartyId());
 
-        updateProfileImage(updatedVoter, profileImg);
-        updateSignatureImage(updatedVoter, signImg);
+        if (voterDTO.getImage() != null) {
+            try {
+                updatedVoter.setImage(saveBase64Image(voterDTO.getImage(), updatedVoter.getSsnNumber(), PHOTO_DIR));
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+        if (voterDTO.getSignature() != null) {
+            try {
+                updatedVoter.setSignature(saveBase64Image(voterDTO.getSignature(), updatedVoter.getSsnNumber(), SIGNATURE_DIR));
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
 
         if (voterDTO != null) {
             if (voterDTO.getPartyId() != null) {
@@ -159,18 +176,15 @@ public class VoterServiceImpl implements VoterService {
                         .orElseThrow(() -> new DataNotFoundException("Party not found with id: " + voterDTO.getPartyId()));
                 updatedVoter.setParty(party);
             }
-
             updateVoterStatus(updatedVoter, voterDTO);
         }
-
         voterRepo.save(updatedVoter);
 
         if (voterDTO != null) {
             updateAddress(voterId, voterDTO.getResidentialAddress(), AddressType.RESIDENTIAL);
             updateAddress(voterId, voterDTO.getMailingAddress(), AddressType.MAILING);
         }
-
-        eventPublisher.publishEvent(new VoterUpdateEvent(this, oldVoter, updatedVoter, oldAddressList, updatedVoter.getAddress()));
+        eventPublisher.publishEvent(new VoterUpdateEvent(this, oldVoter, updatedVoter, getOldAddressList(existingVoter), updatedVoter.getAddress()));
         return globalMapper.toVoterDTO(updatedVoter);
     }
 
@@ -178,11 +192,16 @@ public class VoterServiceImpl implements VoterService {
         var oldResidentialAddress = new Address();
         BeanUtils.copyProperties(existingVoter.getAddress().get(0), oldResidentialAddress);
         var oldMailingAddress = new Address();
-        BeanUtils.copyProperties(existingVoter.getAddress().stream().filter(address -> address.getAddressType().equals(AddressType.MAILING)).findFirst().orElseThrow(), oldMailingAddress);
+        BeanUtils.copyProperties(existingVoter
+                .getAddress()
+                .stream()
+                .filter(address -> address.getAddressType().equals(AddressType.MAILING))
+                .findFirst()
+                .orElseThrow(), oldMailingAddress);
         return List.of(oldResidentialAddress, oldMailingAddress);
     }
 
-    private void updateVoterStatus(Voter updatedVoter, VoterDTO voterDTO) {
+    private void updateVoterStatus(Voter updatedVoter, org.openapitools.model.VoterDTO voterDTO) {
         if (voterDTO.getStatusId() == null) return;
 
         var voterStatus = voterStatusRepo.findById(voterDTO.getStatusId())
@@ -192,62 +211,42 @@ public class VoterServiceImpl implements VoterService {
         log.info("Voter Status Id : {}", voterStatus.getStatusId());
     }
 
-    private void updateProfileImage(Voter updatedVoter, MultipartFile profileImg) throws IOException {
-        if (profileImg == null || profileImg.isEmpty()) return;
 
-        deleteExistingFile(PHOTO_DIR, updatedVoter.getImage());
-
-        String imgName = updatedVoter.getSsnNumber() + "_" + profileImg.getOriginalFilename();
-        Path imagePath = Paths.get(PHOTO_DIR, imgName);
-        Files.write(imagePath, profileImg.getBytes());
-
-        updatedVoter.setImage(imgName);
-    }
-
-    private void updateSignatureImage(Voter updatedVoter, MultipartFile signImg) throws IOException {
-        if (signImg == null || signImg.isEmpty()) return;
-
-        deleteExistingFile(SIGNATURE_DIR, updatedVoter.getSignature());
-
-        String signName = updatedVoter.getSsnNumber() + "_" + signImg.getOriginalFilename();
-        Path signPath = Paths.get(SIGNATURE_DIR, signName);
-        Files.write(signPath, signImg.getBytes());
-
-        updatedVoter.setSignature(signName);
-    }
-
-    private void deleteExistingFile(String directory, String fileName) {
-        if (fileName == null || fileName.isBlank()) return;
-
-        try {
-            Path filePath = Paths.get(directory, fileName);
-            if (Files.exists(filePath)) {
-                Files.deleteIfExists(filePath);
-                log.info("Deleted old file: {}", filePath);
-            }
-        } catch (IOException e) {
-            log.warn("Failed to delete file: {}. Reason: {}", fileName, e.getMessage());
-        }
-    }
-
-    private void updateAddress(String voterId, AddressDTO addressDTO, AddressType addressType) {
+    private void updateAddress(String voterId, org.openapitools.model.AddressDTO addressDTO, AddressType addressType) {
         if (addressDTO == null) return;
-
+        log.info("Voter By Address Type");
         Address address = addressRepo.findByVoter_VoterIdAndAddressType(voterId, addressType)
                 .orElseThrow(() -> new DataNotFoundException(addressType + " address not found for voter: " + voterId));
-
+        log.info("Voter By Address Type");
         globalMapper.addressDTOToAddress(addressDTO, address);
         addressRepo.save(address);
     }
 
 
-    @Override
-    public List<VoterStatusDTO> getAllStatus() {
-        return globalMapper.toVoterStatusDTOList(voterStatusRepo.findAll());
+    private String decodeAndSaveBase64Image(String base64, String directory, String fileName) throws IOException {
+        if (base64 == null || base64.isEmpty()) return null;
+
+        byte[] decodedBytes = Base64.getDecoder().decode(base64);
+        Path filePath = Paths.get(directory, fileName);
+        Files.createDirectories(filePath.getParent());
+        Files.write(filePath, decodedBytes);
+        return filePath.toString();
     }
 
-    @Override
-    public VoterResponseDTO findBySsnNumber(String ssnNumber) {
-        return voterRepo.findBySsnNumber(ssnNumber).orElseThrow(()->new DataNotFoundException("Voter not fount with ssn number : " + ssnNumber));
+    private String saveBase64Image(String base64String, String ssnNumber, String directory) throws IOException {
+        if (base64String == null || base64String.isBlank()) throw new IllegalArgumentException("Base64 string is empty or null");
+
+        String base64Data = base64String.contains(",") ? base64String.split(",", 2)[1].trim() : base64String.trim();
+        base64Data = base64Data.replaceAll("[^A-Za-z0-9+/=]", "");
+
+        byte[] decodedBytes = Base64.getDecoder().decode(base64Data);
+        Path filePath = Paths.get(directory, ssnNumber + ".png");
+
+        Files.createDirectories(filePath.getParent());
+        Files.write(filePath, decodedBytes);
+
+        log.info("Image saved at: {}", filePath);
+        return filePath.getFileName().toString();
     }
+
 }
